{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 11,
  "lineage": "30960df1-b8f4-4852-5be9-6630ab194811",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5493a6d627dd91b",
            "arn": "arn:aws:ec2:us-east-1:853973692277:elastic-ip/eipalloc-0f5493a6d627dd91b",
            "association_id": "eipassoc-07cb680a5554b00b1",
            "domain": "vpc",
            "id": "eipalloc-0f5493a6d627dd91b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c749f571677cf07d",
            "private_dns": "ip-10-0-10-103.ec2.internal",
            "private_ip": "10.0.10.103",
            "public_dns": "ec2-3-232-27-177.compute-1.amazonaws.com",
            "public_ip": "3.232.27.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aurora-okta-8a1-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-nat-eip",
              "Project": "Aurora-Okta-SAML"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1e769742d1cfb49",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-077c2d8c8fe17a2c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aurora-okta-8a1-bastion-profile",
            "id": "i-077c2d8c8fe17a2c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "linux-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0afadc4e2283a03f0",
            "private_dns": "ip-10-0-10-235.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.235",
            "public_dns": "ec2-34-232-109-139.compute-1.amazonaws.com",
            "public_ip": "34.232.109.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "production",
                  "ManagedBy": "Terraform",
                  "Project": "Aurora-Okta-SAML"
                },
                "tags_all": {
                  "Environment": "production",
                  "ManagedBy": "Terraform",
                  "Project": "Aurora-Okta-SAML"
                },
                "throughput": 125,
                "volume_id": "vol-0282ca1e1cd4abb1e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8de37275d8676e5",
            "tags": {
              "Name": "aurora-okta-8a1-bastion"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-bastion",
              "Project": "Aurora-Okta-SAML"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0659b934f0edfdad5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:internet-gateway/igw-017590548d7f0e110",
            "id": "igw-017590548d7f0e110",
            "owner_id": "853973692277",
            "tags": {
              "Name": "aurora-okta-8a1-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-igw",
              "Project": "Aurora-Okta-SAML"
            },
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5493a6d627dd91b",
            "association_id": "eipassoc-07cb680a5554b00b1",
            "connectivity_type": "public",
            "id": "nat-0502b7225dd649f33",
            "network_interface_id": "eni-0c749f571677cf07d",
            "private_ip": "10.0.10.103",
            "public_ip": "3.232.27.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8de37275d8676e5",
            "tags": {
              "Name": "aurora-okta-8a1-nat-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-nat-gateway",
              "Project": "Aurora-Okta-SAML"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:route-table/rtb-0e6e3937a0b0979b7",
            "id": "rtb-0e6e3937a0b0979b7",
            "owner_id": "853973692277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0502b7225dd649f33",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aurora-okta-8a1-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-private-rt",
              "Project": "Aurora-Okta-SAML"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:route-table/rtb-0fa2994d4a0478a82",
            "id": "rtb-0fa2994d4a0478a82",
            "owner_id": "853973692277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-017590548d7f0e110",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aurora-okta-8a1-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-public-rt",
              "Project": "Aurora-Okta-SAML"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004b056aa8e891d5c",
            "route_table_id": "rtb-0e6e3937a0b0979b7",
            "subnet_id": "subnet-00d8adb3497485f45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a521c62eed7d984e",
            "route_table_id": "rtb-0e6e3937a0b0979b7",
            "subnet_id": "subnet-059a8bfb991eafa98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b60af76d927e8e5",
            "route_table_id": "rtb-0fa2994d4a0478a82",
            "subnet_id": "subnet-0c8de37275d8676e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9254016af820843",
            "route_table_id": "rtb-0fa2994d4a0478a82",
            "subnet_id": "subnet-0249cf3e300a12a86"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:security-group/sg-00e10ef74263ecf98",
            "description": "Security group for Aurora cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e10ef74263ecf98",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "202.83.25.24/32"
                ],
                "description": "MySQL from local machine (testing only)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "aurora-okta-8a1-aurora-sg",
            "name_prefix": "",
            "owner_id": "853973692277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-okta-8a1-aurora-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-aurora-sg",
              "Project": "Aurora-Okta-SAML"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:security-group/sg-0659b934f0edfdad5",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0659b934f0edfdad5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from local machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aurora-okta-8a1-bastion-sg",
            "name_prefix": "",
            "owner_id": "853973692277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-okta-8a1-bastion-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-bastion-sg",
              "Project": "Aurora-Okta-SAML"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:security-group/sg-0be5b05b57fbd2613",
            "description": "Security group for RDS Proxy",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "MySQL to Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e10ef74263ecf98"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0be5b05b57fbd2613",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "aurora-okta-8a1-rds-proxy-sg",
            "name_prefix": "",
            "owner_id": "853973692277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-okta-8a1-rds-proxy-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-rds-proxy-sg",
              "Project": "Aurora-Okta-SAML"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.aurora",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:subnet/subnet-00d8adb3497485f45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d8adb3497485f45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853973692277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aurora-okta-8a1-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-private-subnet-1",
              "Project": "Aurora-Okta-SAML"
            },
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:subnet/subnet-059a8bfb991eafa98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059a8bfb991eafa98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853973692277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aurora-okta-8a1-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-private-subnet-2",
              "Project": "Aurora-Okta-SAML"
            },
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:subnet/subnet-0c8de37275d8676e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8de37275d8676e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853973692277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aurora-okta-8a1-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-public-subnet-1",
              "Project": "Aurora-Okta-SAML"
            },
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:subnet/subnet-0249cf3e300a12a86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0249cf3e300a12a86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853973692277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aurora-okta-8a1-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-public-subnet-2",
              "Project": "Aurora-Okta-SAML"
            },
            "vpc_id": "vpc-0bfb23740b4f325fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:vpc/vpc-0bfb23740b4f325fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04af8da632d83460e",
            "default_route_table_id": "rtb-01dbe01b98a0025d8",
            "default_security_group_id": "sg-0842328755c3fd75b",
            "dhcp_options_id": "dopt-00956455b1342abe4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bfb23740b4f325fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01dbe01b98a0025d8",
            "owner_id": "853973692277",
            "tags": {
              "Name": "aurora-okta-8a1-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "aurora-okta-8a1-vpc",
              "Project": "Aurora-Okta-SAML"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}